--- a/l10n_cu_hlg_db_external_connector/views/external_db_source_view.xml
+++ b/l10n_cu_hlg_db_external_connector/views/external_db_source_view.xml
@@ -65,7 +65,7 @@
         <record id="db_external_connector_action" model="ir.actions.act_window">
             <field name="name">External Connections</field>
             <field name="res_model">db_external_connector.template</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">tree,form</field>
         </record>
 
