--- a/l10n_cu_hlg_computers_inventory/views/configuration_views.xml
+++ b/l10n_cu_hlg_computers_inventory/views/configuration_views.xml
@@ -76,7 +76,7 @@
         <record id="computers_inventory_configuration_action" model="ir.actions.act_window">
             <field name="name">Configuration</field>
             <field name="res_model">computers_inventory.configuration</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">form</field>
             <field name="target">inline</field>
             <field name="res_id" ref="computers_inventory_configuration"/>
