--- a/l10n_cu_hlg_computers_inventory/views/inspection_views.xml
+++ b/l10n_cu_hlg_computers_inventory/views/inspection_views.xml
@@ -58,7 +58,7 @@
         <record id="inspection_action" model="ir.actions.act_window">
             <field name="name">Inspections</field>
             <field name="res_model">computers_inventory.inspection</field>
-            <field name="view_type">form</field>
+            <field name="binding_view_types">form</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="inspection_tree_view"/>
             <field name="help" type="html">
